...
                                            </constraints>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Álbum" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8x-t7-XKt">
                                            <rect key="frame" x="72" y="18" width="313.5" height="17"/>
                                            <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Álbuns" id="4Fl-eX-45Y">
                        <barButtonItem key="leftBarButtonItem" title="Novo" id="mWo-ZB-TCg">
                            <connections>
                                <action selector="incluir:" destination="1v5-Za-P5h" id="vId-6X-IIa"/>
...
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="M9G-cZ-nff">
                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="album_nome"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits"/>
...
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hr1-8H-Bs8">
                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="album_banda"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits"/>
...
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Adh-fO-lY0">
                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="album_estilo"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits"/>
...
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="JMQ-8D-LmX">
                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="album_ano"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits"/>
...
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QVL-yv-KTg">
                                                    <rect key="frame" x="20" y="5" width="374" height="34"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="album_url"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                    <textInputTraits key="textInputTraits"/>
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Álbum" id="QAs-09-qtl">
                        <barButtonItem key="rightBarButtonItem" title="Salvar" id="Ks8-UF-o0v">
                            <connections>
                                <action selector="salvar:" destination="qIL-ZU-A7u" id="wKX-IO-9NJ"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Login" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ylt-uz-FTZ">
                                <rect key="frame" x="48" y="250" width="318" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="login"/>
                                <attributedString key="attributedText"/>
                                <textInputTraits key="textInputTraits"/>
...
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Senha" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Idd-wk-osC">
                                <rect key="frame" x="48" y="310" width="318" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="senha"/>
                                <attributedString key="attributedText"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Entrar"/>
                                <connections>
                                    <action selector="entrar:" destination="WGr-Ri-dzQ" eventType="touchUpInside" id="4oh-DV-4dW"/>
...
                                <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Cadastrar"/>
                                <connections>
                                    <segue destination="Np6-WQ-6Cd" kind="popoverPresentation" popoverAnchorView="b5r-VP-hFV" id="RuE-M4-M0n">
...
                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="scI-CZ-8xX">
                                                    <rect key="frame" x="20" y="0.0" width="374" height="34"/>
